Entity relation fixes and initial migration

--- a/DataAccess/appsettings.json
+++ b/DataAccess/appsettings.json
@@ -8,7 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Domain;integrated security=true;"
+    "DefaultConnection": "Data Source=.;Initial Catalog=Domain;integrated security=true;"
   },
 
   "exclude": [
